# rl-elevator

./: CITATION.cff  LICENSE  LOOK-render.txt  README.md  RL_Elevator.ipynb  RL_Project_Proposal_William.pdf:Zone.Identifier  RL_Project_final_report_William.pdf:Zone.Identifier  RL_Project_mid_term_report_William.pdf:Zone.Identifier  pyproject.toml  requirements.txt
Elevators/: __init__.py
Elevators-v1/: __init__.py
Elevators-v1/envs/: __init__.py
Elevators/envs/: __init__.py  (+1 more)
Solver/: BaseSolver.py  FIFO-100.txt  FIFO.py  LOOK-100.txt  LOOK.py  PPO-100.txt  RL-100.txt  examples.py  fifo-rewards.csv  look-rewards-6-1.csv  look-rewards.csv
visualization/: AC_losses_3_1_2000.csv  AC_losses_6_1.csv  AC_losses_6_1_2000.csv  AC_render_3_1.txt  AC_render_6_1.txt  AC_rewards_3_1.csv  AC_rewards_6_1.csv  AC_steps_3_1.csv  AC_steps_6_1.csv  ActorCriticOneStep_test_rewards_3_1.csv  ActorCriticOneStep_test_rewards_6_1.csv  FIFO_6_1.txt  LOOK_6_1.txt  PG_Baseline_losses_3_1.csv  PG_Baseline_losses_6_1.csv  PG_Baseline_rewards_3_1.csv  PG_Baseline_rewards_6_1.csv  PG_Baseline_steps.csv  PG_Baseline_steps_6_1.csv  PG_render_3_1.txt  PG_render_6_1.txt  PPO_render_3_1.txt  PPO_render_6_1.txt  PPO_test_rewards_3_1.csv  PPO_test_rewards_6_1.csv  PolicyGradientWithBaseline_test_rewards_3_1.csv  PolicyGradientWithBaseline_test_rewards_6_1.csv  bad_AC_3_1.txt  bad_FIFO_3_1.txt  bad_FIFO_6_1.txt  bad_LOOK_3_1.txt  bad_LOOK_6_1.txt  event_plot.py  fifo-rewards-3-1.csv  fifo-rewards-6-1.csv  filling_plot.py  load_plot.py  look-rewards-3-1.csv  look-rewards-6-1.csv  ppo-3-1-accumulated.csv  (+5 more)
(+2 files in other folders)
