[tool.poetry]
name = "elevators"            # Package name (lower-case, per Poetry style)
version = "0.0.1"
description = ""
packages = [
  { include = "Elevators" }   # Tells Poetry to include the “Elevators” package
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
gymnasium = "*"
pygame = ">=2.1.3"

[tool.poetry.group.dev.dependencies]   # Development-only extras
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
