[tool.poetry]
name = "elevators"            # Package name (lower-case, per Poetry style)
version = "0.0.1"
description = ""
packages = [
  { include = "Elevators" }   # Tells Poetry to include the “Elevators” package
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
gymnasium = "1.1.1"
numpy = "1.24.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
